samples/_failures_safe/1761561056_0ef0d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74254bcd.c: In function ‘main’:
./samples/SAFE/__tmp_74254bcd.c:155:16: error: missing terminating " character
  155 |         printf("
      |                ^
./samples/SAFE/__tmp_74254bcd.c:155:9: error: expected expression at end of input
  155 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_74254bcd.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74254bcd.c:155:9: error: expected declaration or statement at end of input
